--- a/FirstDemoTest/app/src/main/res/values/strings.xml
+++ b/FirstDemoTest/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FirstDemoTest</string>
+    <string name="app_name">App Name</string>
     <string name="action_settings">Settings</string>
 </resources>
