--- a/WifiSocket/app/src/main/res/values/strings.xml
+++ b/WifiSocket/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Wifi无线遥控</string>
     <string name="bluetooth">蓝牙</string>
     <string name="wifi">Wifi</string>
+    <string name="welcome_last_page_text">开启遥控</string>
     <string name="ip">Master IP :</string>
     <string name="ip_default">192.168.18.111</string>
     <string name="connect">连接</string>
@@ -20,8 +21,8 @@
     <string name="pass_edit">请输入密码</string>
     <string name="pass_edit_Title">请输入密码</string>
     <string name="connect_wifi">已连接</string>
-    <string name="up">上</string>
-    <string name="down">下</string>
-    <string name="left">左</string>
-    <string name="right">右</string>
+    <string name="up">前进</string>
+    <string name="down">后退</string>
+    <string name="left">左转</string>
+    <string name="right">右转</string>
 </resources>
