--- a/HeadControl/app/src/main/res/values/strings.xml
+++ b/HeadControl/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 
     <string name="button_execut">执行路线</string>
     <string name="button_plan">规划新路线</string>
+    <string name="button_remove">删除路线</string>
     <string name="button_plan_back">停止路线</string>
 
     <string name="button_path">请选择路线</string>
