--- a/HeadControl/app/src/main/res/values/strings.xml
+++ b/HeadControl/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="sure">确定</string>
     <string name="cancel">取消</string>
     <string name="warn_info">正在离开路线规划，确定不保存？</string>
+
+    <string name="back">返回上一步</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
