--- a/HeadControl/app/src/main/res/values/strings.xml
+++ b/HeadControl/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="button_pathplan">路线规划</string>
     <string name="button_cruise">漫游行走</string>
     <string name="button_return">地图还原</string>
+    <string name="button_setreturn">设置远点</string>
 
     <string name="button_execut">执行路线</string>
     <string name="button_plan">规划新路线</string>
@@ -27,11 +28,11 @@
     <string name="hintplan">路线1</string>
     <string name="button_clearlast">清除当前</string>
     <string name="button_clearall">清除所有</string>
-
+    <string name="text">1/3米</string>
     <string name="button_point">请点击地图移动</string>
     <string name="savenext">下一步</string>
     <string name="move">移动</string>
-
+    <string name="button_choose">坐标移动</string>
     <string name="roam_start">开始漫游</string>
     <string name="roam_stop">停止漫游</string>
     <string name="button_saveall">规划完毕</string>
