--- a/HeadControl/app/src/main/res/values/strings.xml
+++ b/HeadControl/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="button_plan">规划新路线</string>
     <string name="button_remove">删除路线</string>
     <string name="button_plan_back">停止路线</string>
-
+    <string name="button_scale">请选择地图比例</string>
     <string name="button_path">请选择路线</string>
     <string name="serchtime">找人时间</string>
     <string name="scope">找人范围</string>
@@ -28,7 +28,7 @@
     <string name="hintplan">路线1</string>
     <string name="button_clearlast">清除当前</string>
     <string name="button_clearall">清除所有</string>
-    <string name="text">1:1米</string>
+    <string name="bilici">1:1米</string>
     <string name="button_point">请点击地图移动</string>
     <string name="savenext">下一步</string>
     <string name="move">移动</string>
