--- a/HeadControl/app/src/main/res/values/strings.xml
+++ b/HeadControl/app/src/main/res/values/strings.xml
@@ -29,7 +29,11 @@
     <string name="hintplan">路线1</string>
     <string name="button_clearlast">清除当前</string>
     <string name="button_clearall">清除所有</string>
-    <string name="bilici">1:1米</string>
+    <string name="scale">1:1米</string>
+    <string name="scale_10">1:10米</string>
+    <string name="scale_100">1:100米</string>
+    <string name="scale_2">1:2米</string>
+
     <string name="button_point">请点击地图移动</string>
     <string name="savenext">下一步</string>
     <string name="move">移动</string>
