--- a/LaserRadar/HeadControl/app/src/main/res/values/strings.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="roam_stop">停止漫游</string>
     <string name="button_saveall">规划完毕</string>
     <string name="finishplan">请设置路线名称</string>
+    <string name="passwork">请输入管理员密码</string>
     <string name="warn">提醒</string>
     <string name="sure">确定</string>
     <string name="cancel">取消</string>
