--- a/LaserRadar/HeadControl/app/src/main/res/values/strings.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="button_return">地图还原</string>
     <string name="button_setreturn">设置原点</string>
     <string name="button_returnback">返回原点</string>
-
+    <string name="button_versioncode">版本检测</string>
     <string name="button_execut">执行路线</string>
     <string name="button_plan">规划新路线</string>
     <string name="button_remove">删除路线</string>
