update for robot

--- a/LaserRadar/Robot/app/src/main/res/values/strings.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
 <resources>
     <string name="app_name">Robot</string>
-
+    <string name="btn_sure">确定</string>
+    <string name="btn_delete">删除</string>
+    <string name="btn_cancle">取消</string>
     <string name="config_add">添加</string>
+    <string name="config_redact">编辑</string>
+    <string name="change_area">请修改区域名称</string>
+    <string name="add_area">请输入增加区域名称</string>
+
+
+    <string name="deskname">名称</string>
+    <string name="main">首页</string>
 
     <array name="DATABASE_INFO">
         <item>robot.db</item>
@@ -11,7 +20,8 @@
     <array name="CREATE_TABLE_SQL">
         <item>CREATE TABLE area (id INTEGER PRIMARY KEY AUTOINCREMENT,name TEXT)</item>
         <item>CREATE TABLE desk (id INTEGER PRIMARY KEY AUTOINCREMENT,name TEXT,area INTEGER)</item>
-        <item>CREATE TABLE command (id INTEGER PRIMARY KEY AUTOINCREMENT,type INTEGER,number INTERGER,desk INTERGER)</item>
+        <item>CREATE TABLE command (id INTEGER PRIMARY KEY AUTOINCREMENT,type INTEGER,desk INTERGER,goal INTERGER,direction INTERGER,
+            speed INTERGER,music INTERGER,trouble INTERGER,Error INTERGER,outime INTERGER,shownumber INTERGER,showcolor INTERGER)</item>
         <item>CREATE TABLE robot (id INTEGER PRIMARY KEY AUTOINCREMENT,ip INTEGER,electric INTERGER,type INTERGER ,lastlocation INTEGER)</item>
     </array>
 
