--- a/LaserRadar/Robot/app/src/main/res/values/strings.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/strings.xml
@@ -51,6 +51,9 @@
     <string name="add_desk">请输入桌子名称</string>
     <string name="name_setting">确认修改</string>
 
+    <string name="card_settings">系统卡管理</string>
+    <string name="card_address">磁条编码</string>
+
     <array name="DATABASE_INFO">
         <item>robot.db</item>
         <item>1</item>
