update for main

--- a/LaserRadar/Robot/app/src/main/res/values/strings.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="config_add">添加</string>
     <string name="config_redact">编辑</string>
     <string name="change_area">请修改区域名称</string>
-    <string name="add_area">请输入增加区域名称</string>
+    <string name="add_area">请输入区域名称</string>
     <string name="choose_area">请选择区域</string>
     <string name="choose_robot">请选择执行的机器</string>
     <string name="deskname_setting">设置桌名</string>
@@ -27,19 +27,19 @@
     <string name="puthook">放牵引钩</string>
     <string name="lockhook">锁牵引钩</string>
 
-    <string name="name">名称:</string>
-    <string name="ip">IP地址:</string>
-    <string name="outline">在线状态:</string>
-    <string name="electric">电量电压:</string>
-    <string name="area">所属区域:</string>
-    <string name="state">运动状态:</string>
-    <string name="robot_state">机器人状态:</string>
-    <string name="command_num">指令总数:</string>
-    <string name="excute_command">执行指令:</string>
-    <string name="excute_time">执行时间:</string>
-    <string name="command_state">指令状态:</string>
-    <string name="last_command_state">前指令状态:</string>
-    <string name="last_location">最后坐标:</string>
+    <string name="name">名称</string>
+    <string name="ip">IP地址</string>
+    <string name="outline">在线状态</string>
+    <string name="electric">电量电压</string>
+    <string name="area">所属区域</string>
+    <string name="state">运动状态</string>
+    <string name="robot_state">机器人状态</string>
+    <string name="command_num">指令总数</string>
+    <string name="excute_command">执行指令</string>
+    <string name="excute_time">执行时间</string>
+    <string name="command_state">指令状态</string>
+    <string name="last_command_state">前指令状态</string>
+    <string name="last_location">最后坐标</string>
     <string name="obstacle">障碍物</string>
     <string name="main">首页</string>
     <string name="dining">嘟嘟送餐</string>
