--- a/LaserRadar/RobotClientUdp/app/src/main/res/values/strings.xml
+++ b/LaserRadar/RobotClientUdp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RobotClient</string>
+    <string name="app_name">小二送餐</string>
     <string name="btn_sure">确定</string>
     <string name="btn_delete">删除</string>
     <string name="btn_cancle">取消</string>
