--- a/sjx/OrderDishes/app/src/main/res/values/strings.xml
+++ b/sjx/OrderDishes/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="userNamehint">请输入用户名</string>
     <string name="userpwdhint">请输入密码</string>
     <string name="deskchoose">餐桌选择</string>
+    <string name="foodmenu">菜单</string>
 </resources>
