update for zbrobot

--- a/zb_Robot/app/src/main/res/values/strings.xml
+++ b/zb_Robot/app/src/main/res/values/strings.xml
@@ -138,16 +138,8 @@
         <item></item>
     </array>
     <string-array name="loop_number">
-        <item>无限循环</item>
-        <item>1次</item>
-        <item>2次</item>
-        <item>3次</item>
-        <item>4次</item>
-        <item>5次</item>
-        <item>6次</item>
-        <item>7次</item>
-        <item>8次</item>
-        <item>9次</item>
-        <item>10次</item>
+        <item>不回原点</item>
+        <item>回原点</item>
+        <item>循环</item>
     </string-array>
 </resources>
