--- a/zb_Robot/app/src/main/res/values/strings.xml
+++ b/zb_Robot/app/src/main/res/values/strings.xml
@@ -55,6 +55,8 @@
     <string name="desk_add">添加桌子</string>
     <string name="desk_settings">添加桌子</string>
     <string name="desk_deract">编辑桌子</string>
+    <string name="desk_location">添加位置</string>
+    <string name="desk_deract_location">编辑位置</string>
     <string name="command_deract">编辑命令</string>
     <string name="robot_settings">机器人编辑</string>
     <string name="command_settings">添加指令</string>
@@ -141,5 +143,6 @@
         <item>不回原点</item>
         <item>回原点</item>
         <item>循环</item>
+        <item>回原点并循环</item>
     </string-array>
 </resources>
