--- a/zb_Robot/app/src/main/res/values/strings.xml
+++ b/zb_Robot/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="choose_robot">请选择执行的机器</string>
     <string name="deskname_setting">设置</string>
     <string name="coordinate">目标设置</string>
-    <string name="deskname">桌名</string>
+    <string name="deskname">名称</string>
     <string name="outtime">旋转超时</string>
     <string name="mapsetting">地图设置</string>
     <string name="image">地图选择</string>
@@ -78,7 +78,7 @@
     <string name="map">地图选点</string>
     <string name="map_toast">(开启后可点击地图设置坐标)</string>
     <string name="derection">方向</string>
-    <string name="moredesk">多桌</string>
+    <string name="moredesk">多点</string>
 
     <string name="initial">坐标系初始化</string>
     <string name="back">返回坐标设置</string>
