--- a/Launcher/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Launcher/app/src/main/res/values-zh-rCN/strings.xml
@@ -24,5 +24,7 @@
     <string name="news">新闻</string>
     <string name="message">资讯</string>
     <string name="social_contact">社交</string>
+    <string name="settings">设置</string>
+    <string name="google_play">谷歌商店</string>
     <string name="all">所有内容</string>
 </resources>
