--- a/Launcher/app/src/main/res/values/strings.xml
+++ b/Launcher/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="video">Video</string>
     <string name="news">News</string>
     <string name="message">Message</string>
-    <string name="social_contact">Social Contact</string>
+    <string name="social_contact">Contact</string>
+    <string name="settings">Settings</string>
+    <string name="google_play">Play</string>
     <string name="all">All Content</string>
 </resources>
