--- a/Launcher/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Launcher/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,4 +27,7 @@
     <string name="settings">设置</string>
     <string name="google_play">谷歌商店</string>
     <string name="all">所有内容</string>
+
+    <string name="google_play_not_exit">谷歌商店应用不存在</string>
+    <string name="settings_not_exit">系统设置应用不存在</string>
 </resources>
