--- a/Launcher/app/src/main/res/values/strings.xml
+++ b/Launcher/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="settings">Settings</string>
     <string name="google_play">Play</string>
     <string name="all">All Content</string>
+
+    <string name="google_play_not_exit">The Google store app does not exist</string>
+    <string name="settings_not_exit">System Settings application does not exist</string>
 </resources>
