--- a/MyLauncherWeb/app/src/main/res/values/strings.xml
+++ b/MyLauncherWeb/app/src/main/res/values/strings.xml
@@ -23,7 +23,6 @@
     <string name="news">News</string>
     <string name="message">Message</string>
     <string name="social_contact">Contact</string>
-    <string name="settings">Settings</string>
     <string name="google_play">Play</string>
     <string name="all">All Content</string>
     <string name="add">Add</string>
@@ -104,7 +103,6 @@
     <string name="browser_add_window">+窗口</string>
     <string name="browser_copy_window">复制窗口</string>
     <string name="browser_close_other_window">关闭其它</string>
-    <string name="close">关闭</string>
     <string name="app_server_config">配置</string>
     <string name="app_login_auto">一键登陆</string>
     <string name="go_into">进入</string>
@@ -466,7 +464,6 @@
     <string name="reset_edit">重置编辑</string>
     <string name="share_to_news">分享到新闻</string>
 
-    <string name="exit">退出</string>
     <string name="note">文章</string>
     <string name="memento">记事</string>
     <string name="note_list">文章列表</string>
@@ -1419,10 +1416,6 @@
     <string name="video_layout_loading">正在缓冲...</string>
     <string name="vitamio_theme_app_name">VPlayer codec</string>
     <string name="VideoView_error_title">Cannot play video</string>
-    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming toUserId
-		this device.</string>
-    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
-    <string name="VideoView_error_button">好的</string>
     <string name="mediacontroller_play_pause">Play/Pause</string>
 
     <array name="DATABASE_INFO">
@@ -1438,6 +1431,67 @@
     <array name="UPDATE_TABLE_SQL">
         <item></item>
     </array>
+
+    <string name="N_A">N/A</string>
+    <string name="close">Close</string>
+    <string name="exit">Exit</string>
+    <string name="sample">Sample</string>
+    <string name="recent">Recent</string>
+    <string name="settings">Settings</string>
+    <string name="tracks">Tracks</string>
+    <string name="toggle_player">Player</string>
+    <string name="toggle_render">Render</string>
+    <string name="toggle_ratio">Scale</string>
+    <string name="show_info">Info</string>
+    <string name="vdec">vdec</string>
+    <string name="fps">fps</string>
+    <string name="v_cache">v-cache</string>
+    <string name="a_cache">a-cache</string>
+
+    <string name="media_information">Media Information</string>
+    <string name="mi_player">Player</string>
+    <string name="mi_media">Media</string>
+    <string name="mi_profile_level">Profile level</string>
+    <string name="mi_pixel_format">Pixel format</string>
+    <string name="mi_resolution">Resolution</string>
+    <string name="mi_length">Length</string>
+    <string name="mi_stream_fmt1">Stream #%d</string>
+    <string name="mi_type">Type</string>
+    <string name="mi_language">Language</string>
+    <string name="mi_codec">Codec</string>
+    <string name="mi_frame_rate">Frame rate</string>
+    <string name="mi_bit_rate">Bit rate</string>
+    <string name="mi_sample_rate">Sample rate</string>
+    <string name="mi_channels">Channels</string>
+    <string name="mi__selected_video_track">*</string>
+    <string name="mi__selected_audio_track">*</string>
+
+    <string name="TrackType_video">Video</string>
+    <string name="TrackType_audio">Audio</string>
+    <string name="TrackType_subtitle">Subtitle</string>
+    <string name="TrackType_timedtext">Timed text</string>
+    <string name="TrackType_metadata">Meta data</string>
+    <string name="TrackType_unknown">Unknown</string>
+
+    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
+    <string name="VideoView_error_text_unknown">Unknown</string>
+    <string name="VideoView_error_button">OK</string>
+
+    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
+    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
+    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
+    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
+    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
+    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
+
+    <string name="VideoView_render_none">Render: None</string>
+    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
+    <string name="VideoView_render_texture_view">Render: TextureView</string>
+
+    <string name="VideoView_player_none">Player: None</string>
+    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
+    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
+    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
 
 
 </resources>
