--- a/cultraview/VirtualKey/whiteboardlib/src/main/res/values-en/strings.xml
+++ b/cultraview/VirtualKey/whiteboardlib/src/main/res/values-en/strings.xml
@@ -4,7 +4,7 @@
     <string name="folder_all">All the pictures</string>
     <string name="folder_first">Background material</string>
     <string name="sketch_count_alert">The drawing board has reached the maximum number</string>
-
+    <string name="string_please_unlock">Please unlock</string>
     <string name="msg_no_camera">No system camera found</string>
     <string name="msg_amount_limit">Select images amount is limit</string>
     <string name="action_done">Done</string>
